<resources>
    <string name="app_name">E-buy</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an Account?Login</string>
    <string name="login">Login</string>
    <string name="foget_password">Foget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">user name</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settingsupdate">Update</string>
    <string name="settingsclose">Close</string>
    <string name="settingschange_profile">Change Profile</string>
    <string name="settings_hint_phone_number">Phone Number...</string>
    <string name="settings_hint_full_name">Full Name...</string>
    <string name="settings_hint_address">Address...</string>
    <string name="next">Next</string>
    <string name="product_name_cart">Product Name</string>
    <string name="product_quantity_cart">Product Quantity</string>
    <string name="product_price_cart">Product Price</string>
    <string name="congratulation_final_order_has_been_placed_successfully">Congratulation, final order has been placed successfully. Soon it will be verified.</string>
    <string name="please_confirm_your_shipment_details">Please Confirm your Shipment Details</string>
</resources>