<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15sp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name_cart"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/product_quantity_cart"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price_cart"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_below="@id/cart_product_quantity"
            android:gravity="center"
            android:layout_marginTop="15sp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>